# plugin-template

./: ARCHIVED.md  CHANGELOG.md  README.md  README.zh.md  pyproject.toml
.github/workflows/: ci.yml
src/openclaw_plugin/: __init__.py  config.py  plugin.py
src/openclaw_plugin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_plugin.py
